SubBt/force-app/main/default/objects/Question__c/fields/Additional_Cost__c.field-meta.xml
<CustomField>
    <fullName>Additional_Cost__c</fullName>
    <inlineHelpText>If there is an additional Cost for this option enter it here.</inlineHelpText>
    <label>Additional Costs (DEP)</label>
    <type>TextArea</type>
</CustomField>