SubBt/force-app/main/default/objects/Question__c/fields/Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <label>Auto Number</label>
    <type>AutoNumber</type>
</CustomField>