SubBt/force-app/main/default/objects/Question__c/fields/Change_Order__c.field-meta.xml
<CustomField>
    <fullName>Change_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Change Order the Option was communicated to the Customer.</inlineHelpText>
    <label>Change Order</label>
    <referenceTo>Change_Order__c</referenceTo>
    <relationshipLabel>Options</relationshipLabel>
    <relationshipName>Options</relationshipName>
    <type>Lookup</type>
</CustomField>