SubBt/force-app/main/default/objects/Question__c/fields/Choice_Template__c.field-meta.xml
<CustomField>
    <fullName>Choice_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selection Choice Template</label>
    <referenceTo>Choice_Template__c</referenceTo>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>