SubBt/force-app/main/default/objects/Question__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <inlineHelpText>Sales Price to your Customer.</inlineHelpText>
    <label>Sales Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>