SubBt/force-app/main/default/objects/Question__c/fields/Date_Option_Upgraded__c.field-meta.xml
<CustomField>
    <fullName>Date_Option_Upgraded__c</fullName>
    <label>Date Option Upgraded</label>
    <type>DateTime</type>
</CustomField>