SubBt/force-app/main/default/objects/Question__c/fields/Date_Selected__c.field-meta.xml
<CustomField>
    <fullName>Date_Selected__c</fullName>
    <label>Date Selected</label>
    <type>DateTime</type>
</CustomField>