SubBt/force-app/main/default/objects/Question__c/fields/Default_Option__c.field-meta.xml
<CustomField>
    <fullName>Default_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is the default option that will be ordered if the customer does not make a selection.</inlineHelpText>
    <label>Default Option</label>
    <type>Checkbox</type>
</CustomField>