SubBt/force-app/main/default/objects/Question__c/fields/Display_Layout1__c.field-meta.xml
<CustomField>
    <fullName>Display_Layout1__c</fullName>
    <label>Display Layout1</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Drop Down</fullName>
            </value>
            <value>
                <fullName>Multi Select List</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Simple Text</fullName>
            </value>
            <value>
                <fullName>Text Area</fullName>
            </value>
            <value>
                <fullName>Date Picker</fullName>
            </value>
            <value>
                <fullName>Radio-lineDirection</fullName>
            </value>
            <value>
                <fullName>Checkbox-lineDirection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>