SubBt/force-app/main/default/objects/Question__c/fields/Is_Selected_Item__c.field-meta.xml
<CustomField>
    <fullName>Is_Selected_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Selected Item</label>
    <type>Checkbox</type>
</CustomField>