SubBt/force-app/main/default/objects/Question__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manufacturer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Options (Manufacturer)</relationshipLabel>
    <relationshipName>Options1</relationshipName>
    <type>Lookup</type>
</CustomField>