SubBt/force-app/main/default/objects/Question__c/fields/Markup__c.field-meta.xml
<CustomField>
    <fullName>Markup__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Markup Amount on Sales Price.</inlineHelpText>
    <label>Markup %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>