SubBt/force-app/main/default/objects/Question__c/fields/Options_Name__c.field-meta.xml
<CustomField>
    <fullName>Options_Name__c</fullName>
    <label>Options Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>