SubBt/force-app/main/default/objects/Question__c/fields/Pricing_Request_Line_Detail__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Request_Line_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Request Line Detail</label>
    <referenceTo>Pricing_Request_Line_Details__c</referenceTo>
    <relationshipLabel>Options</relationshipLabel>
    <relationshipName>Options</relationshipName>
    <type>Lookup</type>
</CustomField>