SubBt/force-app/main/default/objects/Question__c/fields/Purchase_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order Line</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Purchase_Order_Item__c.Purchase_Order__c</field>
            <operation>equals</operation>
            <valueField>$Source.Purchase_Order__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Purchase_Order_Item__c</referenceTo>
    <relationshipLabel>Options</relationshipLabel>
    <relationshipName>Options</relationshipName>
    <type>Lookup</type>
</CustomField>