SubBt/force-app/main/default/objects/Question__c/fields/Question_Group__c.field-meta.xml
<CustomField>
    <fullName>Question_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selection Type</label>
    <referenceTo>Question_Group__c</referenceTo>
    <relationshipLabel>Options</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>