SubBt/force-app/main/default/objects/Question__c/fields/Question_HTML__c.field-meta.xml
<CustomField>
    <fullName>Question_HTML__c</fullName>
    <label>Option Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>