SubBt/force-app/main/default/objects/Question__c/fields/Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Type__c</fullName>
    <label>Response Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Select</fullName>
            </value>
            <value>
                <fullName>Multi Select</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>