SubBt/force-app/main/default/objects/Question__c/fields/Rich_Table_Column_Headers__c.field-meta.xml
<CustomField>
    <fullName>Rich_Table_Column_Headers__c</fullName>
    <label>Rich Table Column Headers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>