SubBt/force-app/main/default/objects/Question__c/fields/Selected__c.field-meta.xml
<CustomField>
    <fullName>Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This option has been selected either by default or by the customer.</inlineHelpText>
    <label>Selected</label>
    <type>Checkbox</type>
</CustomField>