SubBt/force-app/main/default/objects/Question__c/fields/Selected_By__c.field-meta.xml
<CustomField>
    <fullName>Selected_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selected By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Options</relationshipName>
    <type>Lookup</type>
</CustomField>