SubBt/force-app/main/default/objects/Question__c/fields/Text_Question_Response_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Text_Question_Response_Data_Type__c</fullName>
    <label>Text Question Response Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>