SubBt/force-app/main/default/objects/Question__c/fields/Total_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Price__c</fullName>
    <formula>IF( Markup__c &gt; 0 , (Markup__c * (Quantity__c * (Cost__c +  Upgrade_Costs__c)) + (Quantity__c * (Cost__c +  Upgrade_Costs__c))), 

(Quantity__c * (Cost__c +  Upgrade_Costs__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Sales Price for your Customer.</inlineHelpText>
    <label>Total Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>