SubBt/force-app/main/default/objects/Question__c/fields/Upgrade__c.field-meta.xml
<CustomField>
    <fullName>Upgrade__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is an upgrade from the standard option.</inlineHelpText>
    <label>Upgraded</label>
    <type>Checkbox</type>
</CustomField>