SubBt/force-app/main/default/objects/Question__c/fields/Upgrade_Costs__c.field-meta.xml
<CustomField>
    <fullName>Upgrade_Costs__c</fullName>
    <inlineHelpText>Additional price, per unit, to your customer for this product.</inlineHelpText>
    <label>Upgrade Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>